@@ -1,5 +1,13 @@
 2025-09-07  Zhengyi Fu  <i@fuzy.me>
 
+	Use project.el's project-name API for better project identification.
+
+	* site-lisp/gptel-config.el (gptel-agent): Use project-name function
+	instead of manually extracting directory name for better project
+	identification and reduced naming conflicts.
+
+2025-09-07  Zhengyi Fu  <i@fuzy.me>
+
 	Add autoload for gptel-agent function.
 
 	* site-lisp/gptel-config.el (gptel-agent): Add autoload cookie.
